Registered with Eureka service
order-service---<>Payment-service

--- a/Order-service-consumer/src/main/resources/application.properties
+++ b/Order-service-consumer/src/main/resources/application.properties
@@ -1,3 +1,9 @@
 server.port=8081
+#SID in Eureka server
+spring.application.name=ORDER-SERVICE-CONSUMER
+#Register with Euraka service
 eureka.client.register-with-eureka=true
+#Fetch registry
 eureka.client.fetch-registry=false
+#Eureka server location
+eureka.client.service-url.default-zone=http://localhost:8761/eureka
