--- a/Order-service-consumer/src/main/resources/application.properties
+++ b/Order-service-consumer/src/main/resources/application.properties
@@ -4,6 +4,7 @@ spring.application.name=ORDER-SERVICE-CONSUMER
 #Register with Euraka service
 eureka.client.register-with-eureka=true
 #Fetch registry
-eureka.client.fetch-registry=false
+eureka.client.fetch-registry=true
 #Eureka server location
 eureka.client.service-url.default-zone=http://localhost:8761/eureka
+eureka.instance.preferIpAddress=true
