LoadBalancerClient using Ribbon
(Ribbon class Implementation  (LoadBalancer->Interface))

--- a/EurekaRD/src/main/resources/application.properties
+++ b/EurekaRD/src/main/resources/application.properties
@@ -3,3 +3,4 @@ server.port=8761
 eureka.client.register-with-eureka=false
 #dont fetch registery
 eureka.client.fetch-registry=false
+eureka.server.waitTimeInMsWhenSyncEmpty=0
