--- a/Payment-service-payment/src/main/resources/application.properties
+++ b/Payment-service-payment/src/main/resources/application.properties
@@ -1,7 +1,9 @@
-server.port=8082
+server.port=8081
 spring.application.name=PAYMENT-SERVICE-PRODUCER
 #register with eureka
 eureka.client.register-with-eureka=true
-eureka.client.fetch-registry=false
+eureka.client.fetch-registry=true
 #Eureka server location 
 eureka.client.service-url.default-zone=http://localhost:8761/eureka
+eureka.instance.instance-id=${spring.application.name}:${random.value}
+eureka.instance.preferIpAddress=true
