Implemented Feign client load balancing in consumer Order-service
Order-service(consumer)------<>Payment-service(Producer)
Feign client internall uses Ribbon load balancer
In consumer, write an interface and place the abstract methods whatever
you wrote in producer rest controller (PaymentRestController)

--- a/EurekaRD/src/main/resources/application.properties
+++ b/EurekaRD/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 server.port=8761
+spring.application.name=eurekaserver
 #dont register with Eureka self
 eureka.client.register-with-eureka=false
 #dont fetch registery
