Added config client for external common properties
Added bootstrap.properties

--- a/Order-service-consumer/src/main/resources/application.properties
+++ b/Order-service-consumer/src/main/resources/application.properties
@@ -8,3 +8,4 @@ eureka.client.fetch-registry=true
 #Eureka server location
 eureka.client.service-url.default-zone=http://localhost:8761/eureka
 eureka.instance.preferIpAddress=true
+#spring.cloud.config.uri=http://localhost:9999
