Read properties from config server
if any changes are done in the external git properties
Take the changes with the help of @RefreshScope
Added actuator dependency in microserives

To take the latest changes from git properties file
Send POST request
http://192.168.1.3:9090/actuator/refresh
output
[
    "config.client.version",
    "my.app.name"
]

--- a/config-server/src/main/resources/application.properties
+++ b/config-server/src/main/resources/application.properties
@@ -1,3 +1,8 @@
 #config server default port number
 server.port=8888
 spring.cloud.config.server.git.uri=https://github.com/teck-leads/configServer
+
+#####below are for native local configuration##########
+#spring.profiles.active=native
+#spring.cloud.config.server.native.search-locations=e:/nativeconfig
+#spring.cloud.config.server.native.search-locations=classpath:/nativeconfig
