--- a/Order-service-consumer/src/main/resources/application.properties
+++ b/Order-service-consumer/src/main/resources/application.properties
@@ -9,3 +9,4 @@ eureka.client.fetch-registry=true
 eureka.client.service-url.default-zone=http://localhost:8761/eureka
 eureka.instance.preferIpAddress=true
 #spring.cloud.config.uri=http://localhost:9999
+management.endpoints.web.exposure.include=*
