--- a/Payment-service-payment/src/main/resources/application.properties
+++ b/Payment-service-payment/src/main/resources/application.properties
@@ -7,3 +7,4 @@ eureka.client.fetch-registry=true
 eureka.client.service-url.default-zone=http://localhost:8761/eureka
 eureka.instance.instance-id=${spring.application.name}:${random.value}
 eureka.instance.preferIpAddress=true
+management.endpoints.web.exposure.include=*
