Configured Springboot Actuator Server UI
1. Configured Springboot Actuator Server UI
2. Configured Actuator client
3. Get the Microservices actuators info in Springboot server UI

--- a/Order-service-consumer/src/main/resources/application.properties
+++ b/Order-service-consumer/src/main/resources/application.properties
@@ -10,3 +10,9 @@ eureka.client.service-url.default-zone=http://localhost:8761/eureka
 eureka.instance.preferIpAddress=true
 #spring.cloud.config.uri=http://localhost:9999
 management.endpoints.web.exposure.include=*
+#/beans which objects are created in spring container
+#/env to view 
+#/cache: to voeiw cache details size, cache name etc
+#/mappings to view what are possible methods in RestControllers
+##Link spring boot admin server UI
+spring.boot.admin.client.url=http://localhost:8989
