--- a/Payment-service-payment/src/main/resources/application.properties
+++ b/Payment-service-payment/src/main/resources/application.properties
@@ -8,3 +8,4 @@ eureka.client.service-url.default-zone=http://localhost:8761/eureka
 eureka.instance.instance-id=${spring.application.name}:${random.value}
 eureka.instance.preferIpAddress=true
 management.endpoints.web.exposure.include=*
+spring.boot.admin.client.url=http://localhost:8989
